# correios-frete-sdk-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
correios_frete_sdk/: __init__.py  frete.py
tests/: test_frete.py
