[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "correios-frete-sdk"
version = "0.1.0"
description = "SDK para cálculo de frete com os Correios"
authors = [{ name="Seu Nome", email="seu@email.com" }]
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["requests"]
