[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "correios-frete-sdk"
version = "0.1.2"
description = "SDK para cálculo de frete com os Correios"
authors = [{ name="Thiago C Soares", email="contact@thiagocsoares.com.br" }]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests",
    "types-urllib3"
]
